Better error handling and added sensors

--- a/custom_components/gfs_weather_forecast/translations/nl.json
+++ b/custom_components/gfs_weather_forecast/translations/nl.json
@@ -5,7 +5,7 @@
         },
         "error": {
             "cannot_connect": "Er zijn problemen met de verbinding",
-            "invalid_auth": "Het lijkt er op dat uw position zich niet de gekozen regio bevindt",
+            "invalid_auth": "Het lijkt er op dat de GFS Weather Forecast addon niet draait",
             "unknown": "Onverwachte foutmelding"
         },
         "step": {
