--- a/custom_components/gfs_weather_forecast/translations/en.json
+++ b/custom_components/gfs_weather_forecast/translations/en.json
@@ -5,7 +5,7 @@
         },
         "error": {
             "cannot_connect": "Failed to connect",
-            "invalid_auth": "Looks like you position isn't within the choosen region",
+            "invalid_auth": "Looks like the GFS Weather Forecast addon isn't runnning",
             "unknown": "Unexpected error"
         },
         "step": {
